--- a/plos_template.tex
+++ b/plos_template.tex
@@ -35,7 +35,7 @@
 % "Models" is not a valid title for PLoS ONE authors. However, PLoS ONE
 % authors may use "Analysis" 
 \section*{Materials and Methods}
-\subsection*{Categories\todo{so far, this section is lifted from planetmath.org, but it is standard stuff.}}
+\subsection*{Categories\todo{so far, this section is from planetmath.org. it is standard stuff that could be replaced by a textbook reference.}}
 \input{tex/intuition.tex}
 \input{tex/category.tex}
 %
