added info on metab reduct

--- a/fig/tikz/blockdiagtop.tex
+++ b/fig/tikz/blockdiagtop.tex
@@ -4,7 +4,7 @@
 
 % Define a few styles and constants
 \tikzstyle{l1}=[draw, fill=black!15, text width=5em, 
-    text centered, minimum height=2.5em]
+    text centered, minimum height=2.5em, rounded corners]
 \tikzstyle{l2} = [l1, text width=6em, fill=black!15, 
     minimum height=10em, rounded corners]
 \tikzstyle{ann} = [above, text width=5em]
