--- a/plos_template.tex
+++ b/plos_template.tex
@@ -35,7 +35,7 @@
 % "Models" is not a valid title for PLoS ONE authors. However, PLoS ONE
 % authors may use "Analysis" 
 \section*{Materials and Methods}
-\subsection*{Categories\todo{so far, this section is from planetmath.org. it is standard stuff that could be replaced by a textbook reference.}}
+\subsection*{Categories\todo{This section is taken from planetmath.org. It is standard stuff that could be replaced by references to textbooks, but is helpful to include in supplemental material for reference.}}
 \input{tex/intuition.tex}
 \input{tex/category.tex}
 %
