--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -2,7 +2,7 @@ The capacities have been demonstrated to chemically synthesize and transplant ge
 
 Very few biologists or other scientists dispute that evolution is the most fundamental organizing concept in biology. In this light, it seems somewhat surprising that not even more effort than has already been exerted is invested in clarifying and formalizing increasingly detailed conceptions of its origins and operation. In order to understand biological systems, it will be necessary to address the question: What are the necessary enabling conditions that make biological evolution possible? The synthesis of some potential answers to this question may clarify a path toward defining a sufficient collection of preconditions for evolutionary processes to take flight.
 
-Here we argue that one such necessary precondition for evolutionary processes, which has been identified before as a ``defining characteristic of life''\cite{Rosen1972,Rosen1978,Rosen1985,Rosen1991}, is what we refer to as \emph{functional closure}. In order to define this term and its context, we begin with a diagrammatic model of a prototypical biochemical reaction network that has been claimed to possess this property. We then ask: Is there a formal language capable of expressing this property? A brief detour is necessary to motivate this question. In computer science, there is a property of languages called \emph{expressive power} that is used both heuristically and formally to rank order models of computation, programming languages, and their associated logics with respect to one another and with respect to so-called \emph{natural language}. Roughly speaking, an increased level of expressive power of a language correlates with its ability to express more complex or sophisticated ideas. One might ask why it is not always desirable to work within the extant language containing the highest possible expressive power. One reason to consider less expressive languages at all is that important questions about them can be answered algorithmically with appropriate computer hardware and software in a practical amount of time and memory, whereas the same questions posed of languages with more expressive power are known not to be able to be answered by such means\todo{cite a review and/or text containing relevant results in computational complexity and computability theory}. Thus, identifying a \emph{minimal} language capable of expressing the necessary conditions for the origin of evolutionary processes is directly germane to the continuing development of exquisitely detailed models of whole cells as they are refined, unfold and are embedded into equally detailed multi-level models of populations, communities, and ecosystems.
+Here we argue that one such necessary precondition for evolutionary processes, which has been identified before as a ``defining characteristic of life''\cite{Rosen1972,Rosen1978,Rosen1985,Rosen1991}, is what we refer to as \emph{functional closure}. In order to define this term and its context, we begin with a diagrammatic model of a prototypical biochemical reaction network that has been claimed to possess this property. We then ask: Is there a formal language capable of expressing this property? A brief detour is necessary to motivate this question. In computer science, there is a property of languages called \emph{expressive power} that is used both heuristically and formally to rank order models of computation, programming languages, and their associated logics with respect to one another and with respect to so-called \emph{natural language}. Roughly speaking, an increased level of expressive power of a language correlates with its ability to express more complex or sophisticated ideas. One might ask why it is not always desirable to work within the extant language containing the highest possible expressive power. One reason to consider less expressive languages at all is that important questions about them can be answered algorithmically with appropriate computer hardware and software in a practical amount of time and memory, whereas the same questions posed of languages with more expressive power are known not to be able to be answered by such means\cite{Hopcroft2007}. Thus, identifying a \emph{minimal} language capable of expressing the necessary conditions for the origin of evolutionary processes is directly germane to the continuing development of exquisitely detailed models of whole cells as they are refined, unfold and are embedded into equally detailed multi-level models of populations, communities, and ecosystems.
 
 In this light, we can refine the question, "Is there a formal language capable of expressing the functional closure property?" by adjoining the follow-up question, "If so, among those that are, which is the language of minimal expressive power?" We begin to address the first question taking an historically motivated approach \cite{Rosen1972,Letelier2006} by attempting to interpret the aforementioned diagram expressing functional closure in terms of an abstract algebraic language (category theory). Unfortunately, the prototypical diagram violates a fundamental assumption of this language precisely because the diagram expresses the functional closure property. This diagram, and indeed the functional closure property in general, can be interpreted in terms of a standard model of computation called (untyped or type-free) lambda calculus \cite{Mossio2009}. Via this conceptual route, we find that the interpretation of functional closure in terms of category theory can be recovered, albeit it in a form that looks quite different, via one typical category theoretic semantics for the untyped lambda calculus \cite{Scott1980,Barendregt1985,Abramsky1995}.
 
