--- a/tex/titleinfo.tex
+++ b/tex/titleinfo.tex
@@ -1,18 +1,20 @@
+%!TEX root = ../plos_template.tex
 \begin{flushleft}
 {\Large
 \textbf{A minimal language for functional closure and the origin of evolvability}
 }
+
 % Insert Author names, affiliations and corresponding author email.
 \\
-Author1$^{1}$, 
-Author2$^{2}$, 
-Author3$^{3,\ast}$
+Cameron Smith$^{1, \ast}$,
+Ximo Pechuan$^{1}$
+% Daniel Biro$^{1}$,
+% Aviv Bergman$^{1,2,3,4, \ast}$
 \\
-\bf{1} Author1 Dept/Program/Center, Institution Name, City, State, Country
+\bf{1} Department of Systems and Computational Biology, Albert Einstein College of Medicine, Bronx, NY, USA
+% \bf{2} Dominick P. Purpura Department of Neuroscience,
+% \bf{3} Department of Pathology, Albert Einstein College of Medicine, Bronx, NY, USA
+% \bf{4} Santa Fe Institute, 1399 Hyde Park Road, Santa Fe, NM 87501, USA
 \\
-\bf{2} Author2 Dept/Program/Center, Institution Name, City, State, Country
-\\
-\bf{3} Author3 Dept/Program/Center, Institution Name, City, State, Country
-\\
-$\ast$ E-mail: Corresponding author@institute.edu
+$\ast$ E-mail: cameron.smith@med.einstein.yu.edu
 \end{flushleft}
