--- a/plos_template.tex
+++ b/plos_template.tex
@@ -9,11 +9,12 @@
 
 % Please keep the abstract between 250 and 300 words
 \section*{Abstract}
+\input{tex/abstract.tex}
 
 % Please keep the Author Summary between 150 and 200 words
-% Use first person. PLoS ONE authors please skip this step. 
-% Author Summary not valid for PLoS ONE submissions.   
-\section*{Author Summary}
+% Use first person. PLoS ONE authors please skip this step.
+% Author Summary not valid for PLoS ONE submissions.
+%\section*{Author Summary}
 
 %\input{tex/todonoteinstructions}
 
@@ -31,9 +32,9 @@
 \input{tex/discussion.tex}
 
 
-% You may title this section "Methods" or "Models". 
+% You may title this section "Methods" or "Models".
 % "Models" is not a valid title for PLoS ONE authors. However, PLoS ONE
-% authors may use "Analysis" 
+% authors may use "Analysis"
 \section*{Materials and Methods}
 \subsection*{Categories\todo{This section is taken from planetmath.org. It is standard stuff that could be replaced by references to textbooks, but is helpful to include in supplemental material for reference.}}
 \input{tex/intuition.tex}
